# KeyZen

./: AGENTS.md  Cargo.toml  README.md
crates/keyzen/: Cargo.toml  build.rs
crates/keyzen-core/: Cargo.toml
crates/keyzen-core/src/: config.rs  engine.rs  key.rs  lib.rs
crates/keyzen-win/: Cargo.toml
crates/keyzen-win/src/: app.rs  app_config.rs  defaults.rs  dialog.rs  hook.rs  keycode.rs  lib.rs  log.rs  output.rs  startup.rs  tray.rs
crates/keyzen/src/: main.rs
docs/: keymap-guide.ko.md
examples/: config.toml  keyzen.toml  vim.toml
scripts/: package.ps1
