[workspace]
members = [
    "crates/keyzen-core",
    "crates/keyzen-win",
    "crates/keyzen",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/keyzen"

[workspace.dependencies]
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
